--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -140,7 +140,7 @@ jobs:
     - name: Install test dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y curl jq netcat
+        sudo apt-get install -y curl jq netcat-openbsd
 
     - name: Start application with Docker Compose
       run: |
