fix: Add healthcheck for PostgreSQL service and ensure app depends on healthy state

--- a/udemy-final-project/docker-compose.yml
+++ b/udemy-final-project/docker-compose.yml
@@ -12,6 +12,11 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - event-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d eventdb"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   app:
     build: .
@@ -26,7 +31,8 @@ services:
       DB_PASSWORD: postgres
       DB_NAME: eventdb
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     networks:
       - event-network
     restart: unless-stopped
