feat: Integrate Apache Kafka for event-driven architecture
- Added Kafka integration for asynchronous event processing.
- Implemented Kafka producer and consumer services.
- Updated event service to publish events to Kafka on create, update, and delete operations.
- Enhanced gRPC client to support authentication with JWT.
- Updated Docker Compose to include Kafka and Zookeeper services.
- Extended README with Kafka architecture, usage, and configuration details.
- Added example of Kafka consumer message processing.

--- a/udemy-final-project/docker-compose.yml
+++ b/udemy-final-project/docker-compose.yml
@@ -1,4 +1,33 @@
 services:
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.4.0
+    container_name: event-zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+    networks:
+      - event-network
+
+  kafka:
+    image: confluentinc/cp-kafka:7.4.0
+    container_name: event-kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://kafka:29092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+    networks:
+      - event-network
+
   postgres:
     image: postgres:15-alpine
     container_name: event-postgres
@@ -30,9 +59,12 @@ services:
       DB_USER: postgres
       DB_PASSWORD: postgres
       DB_NAME: eventdb
+      KAFKA_BROKERS: kafka:29092
     depends_on:
       postgres:
         condition: service_healthy
+      kafka:
+        condition: service_started
     networks:
       - event-network
     restart: unless-stopped
