--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,6 +9,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  GO_VERSION: '1.25'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -18,6 +19,9 @@ jobs:
   test:
     name: Test Application
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: udemy-final-project
 
     services:
       postgres:
@@ -39,25 +43,35 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.25'
+        go-version: ${{ env.GO_VERSION }}
 
     - name: Cache Go modules
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
-        path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-mod-${{ hashFiles('udemy-final-project/go.sum') }}
+        path: |
+          ~/.cache/go-build
+          ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ env.GO_VERSION }}-${{ hashFiles('**/go.sum') }}
         restore-keys: |
-          ${{ runner.os }}-go-mod-
+          ${{ runner.os }}-go-${{ env.GO_VERSION }}-
+          ${{ runner.os }}-go-
 
     - name: Install dependencies
       run: go mod download
-      working-directory: udemy-final-project
+
+    - name: Install golangci-lint
+      uses: golangci/golangci-lint-action@v4
+      with:
+        version: latest
+        working-directory: .
+
+    - name: Run golangci-lint
+      run: golangci-lint run --timeout=5m
 
     - name: Run Go tests
-      run: go test ./... -v
-      working-directory: udemy-final-project
+      run: go test ./... -v -race -coverprofile=coverage.out
       env:
         DB_HOST: localhost
         DB_PORT: 5432
@@ -65,14 +79,55 @@ jobs:
         DB_PASSWORD: postgres
         DB_NAME: eventdb
 
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        file: ./coverage.out
+        flags: unittests
+        name: codecov-umbrella
+
     - name: Build application
       run: go build -v ./...
-      working-directory: udemy-final-project
+
+  security-scan:
+    name: Security Scan
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: udemy-final-project
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: ${{ env.GO_VERSION }}
+
+    - name: Run Gosec Security Scanner
+      uses: securecodewarrior/github-action-gosec@master
+      with:
+        args: ./...
+
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@master
+      with:
+        scan-type: 'fs'
+        scan-ref: '.'
+        format: 'sarif'
+        output: 'trivy-results.sarif'
+
+    - name: Upload Trivy scan results to GitHub Security tab
+      uses: github/codeql-action/upload-sarif@v3
+      if: always()
+      with:
+        sarif_file: trivy-results.sarif
 
   build-and-test-docker:
     name: Build and Test Docker Image
     runs-on: ubuntu-latest
-    needs: test
+    needs: [test, security-scan]
     permissions:
       contents: read
       packages: write
@@ -116,15 +171,18 @@ jobs:
     name: Integration Tests
     runs-on: ubuntu-latest
     needs: build-and-test-docker
+    defaults:
+      run:
+        working-directory: udemy-final-project
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
-        go-version: '1.25'
+        go-version: ${{ env.GO_VERSION }}
 
     - name: Install test dependencies
       run: |
@@ -135,13 +193,11 @@ jobs:
       run: |
         docker compose down -v --remove-orphans || true
         docker system prune -f || true
-      working-directory: udemy-final-project
 
     - name: Start application with Docker Compose
       run: |
         docker compose up -d --build
         sleep 30  # Wait for services to be ready
-      working-directory: udemy-final-project
 
     - name: Wait for services to be healthy
       run: |
@@ -169,7 +225,6 @@ jobs:
       run: |
         chmod +x test.sh
         ./test.sh
-      working-directory: udemy-final-project
       env:
         API_BASE_URL: http://localhost:8080
         GRPC_HOST: localhost:50051
@@ -179,11 +234,9 @@ jobs:
     - name: Show application logs
       if: always()
       run: docker compose logs
-      working-directory: udemy-final-project
 
     - name: Clean up
       if: always()
       run: |
         docker compose down -v --remove-orphans
         docker system prune -f
-      working-directory: udemy-final-project
