--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Install golangci-lint
       uses: golangci/golangci-lint-action@v8
       with:
-        version: v1.61.0
+        version: latest
         working-directory: .
 
     - name: Run golangci-lint
