--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -61,27 +61,11 @@ jobs:
     - name: Install dependencies
       run: go mod download
 
-    - name: Install protobuf compiler
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y protobuf-compiler
-
-    - name: Install protobuf Go plugins
-      run: |
-        go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-        go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
-
-    - name: Generate protobuf files
-      run: |
-        export PATH=$PATH:$(go env GOPATH)/bin
-        protoc --proto_path=. --proto_path=./include --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/auth.proto proto/event.proto
-        mv proto/auth.pb.go proto/auth_grpc.pb.go proto/auth/ 2>/dev/null || true
-        mv proto/event.pb.go proto/event_grpc.pb.go proto/event/ 2>/dev/null || true
 
     - name: Install golangci-lint
       uses: golangci/golangci-lint-action@v8
       with:
-        version: v1.61.0
+        version: latest
         working-directory: udemy-final-project
 
     - name: Run golangci-lint
