--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -120,27 +120,11 @@ jobs:
     - name: Install dependencies
       run: go mod download
 
-    - name: Install protobuf compiler
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y protobuf-compiler
-
-    - name: Install protobuf Go plugins
-      run: |
-        go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-        go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
-
-    - name: Generate protobuf files
-      run: |
-        export PATH=$PATH:$(go env GOPATH)/bin
-        protoc --proto_path=. --proto_path=./include --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/auth.proto proto/event.proto
-        mv proto/auth.pb.go proto/auth_grpc.pb.go proto/auth/ 2>/dev/null || true
-        mv proto/event.pb.go proto/event_grpc.pb.go proto/event/ 2>/dev/null || true
 
     - name: Run gosec (excluding auto-generated files)
       uses: securego/gosec@v2.21.4
       with:
-        args: '-exclude-dir=proto/auth,exclude-dir=proto/event ./...'
+        args: '-exclude-dir=proto/auth,exclude-dir=proto/ ./...'
 
     - name: Install govulncheck
       run: go install golang.org/x/vuln/cmd/govulncheck@latest
