--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -126,6 +126,13 @@ jobs:
       with:
         go-version: '1.25'
 
+    - name: Log in to Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
     - name: Install test dependencies
       run: |
         sudo apt-get update
@@ -139,7 +146,7 @@ jobs:
 
     - name: Start application with Docker Compose
       run: |
-        docker compose up -d --build
+        docker compose up -d
         sleep 30  # Wait for services to be ready
       working-directory: udemy-final-project
 
