--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -179,6 +179,9 @@ jobs:
     name: Integration Tests
     runs-on: ubuntu-latest
     needs: build-and-test-docker
+    defaults:
+      run:
+        working-directory: udemy-final-project
 
     steps:
     - name: Checkout code
@@ -235,7 +238,6 @@ jobs:
 
     - name: Run integration tests
       run: |
-        cd udemy-final-project
         chmod +x test.sh
         ./test.sh
       env:
